# aock

./: .editorconfig  .gitignore  README.md  build.ninja  compile_flags.txt  linker.ld
src/: mstdc.h  mstdc.riscv.h
src/aock/: actor.h  alloc.h  core.h  entry.s  kernel.h  lang.c  linker.ld  main.c  pm.c  pm.h  riscv.h  trap.h  vm.c  vm.h
src/aock/arch/rv64/: core.h  entry.s  ktvec.s  linker.ld  mem.h  mstdc.c  pm.c  proc.c  trampoline.s  trap.c  vector.s  vm.c
src/comp/: compile_flags.txt  driver.hh
src/lc/: dune-project  lc.opam
src/lc/lib/: ast.ml  dune  parser.ml  parser.mly
src/lc/test/: dune
src/mstdc/: aock.c  core.c
src/web/: index.html
