(lang dune 3.12)

(name lc)

(generate_opam_files true)

(source
 (github monomere/aock))

(authors "monomere")

(maintainers "monomere")

(license LICENSE)

; (documentation https://url/to/documentation)

(package
 (name lc)
 (synopsis "compiler")
 (description "long compiler")
 (depends ocaml dune))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
